--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.security.user.name: abc
 spring.security.user.password: 123
+telegram.key:5087418917:AAF9FTVsp62CnsFLdlh-a1FzyblRn5FzmIk
+telegram.channel:@PortfolioContactRequests
